# bot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.toml
src/tradingbot/: __init__.py  __main__.py
src/tradingbot/cli/: commands.py
src/tradingbot/config/: loader.py  settings.py
src/tradingbot/connectors/: alpaca_connector.py  ccxt_connector.py  polymarket_connector.py
src/tradingbot/core/: base.py  engine.py  exceptions.py  models.py
src/tradingbot/utils/: async_helpers.py
src/tradingbot/web/: app.py
src/tradingbot/web/static/: dashboard.js  index.html
tests/: conftest.py
tests/integration/: test_live.py
tests/unit/: test_config.py  test_connectors.py  test_models.py
